fix: fix the "pre" and "code" have different width when codefences are too wide

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,6 +252,7 @@ div.highlight pre {
     border: none;
     display: grid;
     margin: 0px;
+    overflow: auto; /* Have to add this line, otherwise the "pre" and "code" will have different width */
     /* padding-left: 10px; */
     /* padding-right: 10px; */
     /* padding-top: 10px; */
